Added the full screen functionality to the Custom HTML5 Video Player entitled lesson

--- a/CustomHTML5VideoPlayer/style.css
+++ b/CustomHTML5VideoPlayer/style.css
@@ -46,6 +46,22 @@ body {
   border-color: #ffc600;
 }
 
+.fullscreen__button {
+  background:none;
+  border:0;
+  line-height:1;
+  color:white;
+  text-align: center;
+  outline:0;
+  padding: 0;
+  cursor:pointer;
+  max-width:50px;
+}
+
+.fullscreen__button:focus {
+  border-color: #ffc600;
+}
+
 .player__slider {
   width:10px;
   height:30px;
